# ACELearn

./: .gitignore  Building_ACE.md  CMakeLists.txt  CMakeSettings.json  README.md  build-ace.py  project.py  requirements.txt
ACE_Hello/: CMakeLists.txt  helloace  helloace.cpp
CommandLineApp/: CMakeLists.txt  CommandLineApp.cpp
SimpleSockets/: CMakeLists.txt  main.cpp
